FIX: Fixed alignment of everything

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 body {
     background-image: url(LibraryBakcgroundImage.jpg);
     padding: 4rem;
+    overflow-x: hidden;
 }
 
 button {
@@ -18,15 +19,15 @@ button:hover {
 }
 
 h1 {
-  position: fixed;
-  left: 15rem;
+  display: flex;
+  justify-content: center;
   color: white;
   text-shadow: black 2px 2px 2px;
-  transition: left 0.5s;
 }
 
 h2 {
-  justify-self: center;
+  font-family: "Goudy Bookletter 1911", serif;
+  font-size: 1.5rem;
 }
 
 form {
@@ -34,7 +35,7 @@ form {
   width: 0rem;
   position: fixed;
   z-index: 1;
-  top: 10%;
+  top: 20%;
   left: 0;
   backdrop-filter: blur(0.5rem);
   background-color: #ffffff84;
@@ -42,7 +43,7 @@ form {
   overflow-x: hidden;
   transition: width 0.5s;
   display: grid;
-  grid-template-rows: 1fr 3fr 1fr;
+  grid-template-rows: 1fr 3fr 2fr;
   grid-template-columns: 1fr;
   align-items: center;
 }
@@ -54,6 +55,12 @@ input {
   border-radius: 0.5rem;
 }
 
+#formHeader {
+  white-space: nowrap;
+  text-align: center;
+  margin: 0 auto;
+}
+
 #formInputs {
   display: flex;
   flex-direction: column;
@@ -61,10 +68,18 @@ input {
   gap: 0.5rem;
 }
 
+#formSwitchSubmit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding-bottom: 1.5rem;
+}
+
 #libraryDiv {
     position: absolute;
     top: 14rem;
-    left: 4rem;
+    left: 5rem;
     display: flex;
     gap: 2rem;
     padding: 2rem;
@@ -80,7 +95,7 @@ input {
     display: grid;
     grid-template-rows: 3fr 1fr 1fr 1fr 4fr;
     gap: 1rem;
-    padding-left: 1rem;
+    padding-left: 1.5rem;
     padding-top: 1rem;
 }
 
@@ -95,7 +110,7 @@ input {
 
 #showFormBtn {
   position: absolute;
-  top: 10%;
+  top: 20%;
   left: 0;
   height: 3rem;
   width: 6rem;
@@ -108,9 +123,9 @@ input {
 
 #submitBtn {
   height: 2.5rem;
-  width: 5rem;
+  width: 9rem;
   border-radius: 2rem;
-  justify-self: center;
+  background: linear-gradient(rgb(34, 129, 161), rgb(99, 169, 204));
 }
 
 #submitBtn:hover {
@@ -119,10 +134,8 @@ input {
 
 .switch {
     display: flex;
-    align-items: center;
     justify-content: space-between;
     width: 80%;
-    padding-top: 1rem;
   }
   
   .switch input { 
@@ -147,7 +160,7 @@ input {
     height: 1.15rem;
     width: 1.15rem;
     left: 0.3rem;
-    bottom: 0.2rem;
+    bottom: 0.175rem;
     background-color: white;
     transition: .4s;
     border-radius: 50%;
